--- a/src/templates/lib_makefile.template
+++ b/src/templates/lib_makefile.template
@@ -6,7 +6,7 @@
 
 RAVEN_PATH := <%= raven_path %>
 
-include $(RAVEN_PATH)/tools/arm/gba_rules
+include $(RAVEN_PATH)/tools/ARM/gba_rules
 
 #---------------------------------------------------------------------------------
 # TARGET is the name of the output file
