--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/0505gonzalez/raven-cli#readme",
   "dependencies": {
     "assert-plus": "^1.0.0",
+    "async": "^2.1.4",
     "colors": "^1.1.2",
     "commander": "^2.9.0",
     "fs-extra": "^1.0.0",
