--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "colors": "^1.1.2",
     "commander": "^2.9.0",
     "fs-extra": "^1.0.0",
+    "joi": "^10.2.0",
     "prompt": "^1.0.0",
     "underscore": "^1.8.3"
   },
