--- a/package.json
+++ b/package.json
@@ -29,16 +29,19 @@
   "dependencies": {
     "assert-plus": "^1.0.0",
     "async": "^2.1.4",
+    "chai": "^3.5.0",
     "colors": "^1.1.2",
     "commander": "^2.9.0",
     "fs-extra": "^1.0.0",
     "joi": "^10.2.0",
+    "mocha": "^3.2.0",
     "prompt": "^1.0.0",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
     "grunt": "^1.0.1",
     "grunt-contrib-jshint": "^1.1.0",
+    "grunt-mocha-test": "^0.13.2",
     "jshint": "^2.9.4"
   }
 }
