Add test coverage
https://github.com/ravenframework/raven-cli/issues/19

--- a/.jshintrc
+++ b/.jshintrc
@@ -166,6 +166,7 @@
         "expect": true,
         "by": true,
         "browser": true,
-        "element": true
+        "element": true,
+        "PROJECT_PATH": true
         }
 }
